# minio-rs-fut

./: Cargo.toml
src/: main.rs  minio.rs
src/minio/: api.rs  api_notification.rs  sign.rs  types.rs
