[package]
name = "minio-rs"
version = "0.1.0"
authors = ["MinIO Dev Team <dev@min.io>", "shiqifeng2000@gmail.com"]
edition = "2021"

[dependencies]
bytes = "0.5.6"
log = "0.4.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.6", features = ["serde"] }

futures = "^0.3.5"
http = "^0.2.1"
hyper = "^0.13.9"
hyper-tls = "^0.4.3"
pretty_env_logger = "^0.3.0"
ring = "^0.14.6"
roxmltree = "^0.6.0"
tokio = { version = "^0.2.22", features = ["rt-core", "rt-threaded", "rt-util", "macros"] }
xml-rs = "^0.8.0"
